dimagi-SalesforceFB/src/objects/SFDC_Employee__c.object
<CustomObject>
    <fields>
        <fullName>ABSO__c</fullName>
        <label>Background Check on File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Education__c</fullName>
        <label>Additional Education</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Salary_in_USD__c</fullName>
        <formula>Salary__c / Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Salary in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>At_Will_Employment_Agreement__c</fullName>
        <inlineHelpText>Has the employee signed an At-Will Employment Agreement (as opposed to another type of contractual agreement)?</inlineHelpText>
        <label>At-Will Employment Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Description__c</fullName>
        <label>BU Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_location__c</fullName>
        <label>Base Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BizDev__c</fullName>
        <label>BizDev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bonus_Potential__c</fullName>
        <formula>Salary__c  *  0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus (Potential)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COL_Location__c</fullName>
        <inlineHelpText>Select the location used for payscale COL calculations</inlineHelpText>
        <label>COL Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antigua</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
                <value>
                    <fullName>Dakar</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Harare</fullName>
                </value>
                <value>
                    <fullName>LA/Seattle</fullName>
                </value>
                <value>
                    <fullName>Lusaka</fullName>
                </value>
                <value>
                    <fullName>Maputo</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
                <value>
                    <fullName>Nairobi</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>Yangon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Center__c</fullName>
        <label>Call Center #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Citizenship_2__c</fullName>
        <label>Citizenship 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Britain</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Haiti</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Britain</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dominican Republic</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Haiti</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consented_to_share_salary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has the employee given written consent for Dimagi to share his or her salary information externally (e.g. to a new employer doing a background check)?</inlineHelpText>
        <label>Consented to Share Salary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corp_Photo__c</fullName>
        <formula>IMAGE(&quot;http://www.salesforceius.com/appx/staffpix/&quot;&amp;  JPG__c , Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Visa__c</fullName>
        <label>Country of Visa</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Local Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_City__c</fullName>
        <label>Current Address City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Country__c</fullName>
        <label>Current Address Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_State__c</fullName>
        <label>Current Address State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Street__c</fullName>
        <label>Current Address Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Zip_Postal_Code__c</fullName>
        <label>Current Address Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DLAC__c</fullName>
        <label>DLAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMoz__c</fullName>
        <label>DMoz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSA__c</fullName>
        <label>DSA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <label>DSI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA__c</fullName>
        <label>DWA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Policy_Expiry__c</fullName>
        <label>Date of Policy Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Employed__c</fullName>
        <formula>TODAY () - Hire_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Employed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desk_Terminal__c</fullName>
        <label>Desk Terminal</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimagi_Extension__c</fullName>
        <label>Office Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Cost__c</fullName>
        <label>Direct Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Direct_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Direct Manager</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Manager__c</fullName>
        <label>Direct Manager SF ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMERGENCY_CONTACT__c</fullName>
        <label>EMERGENCY CONTACT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMP_ID__c</fullName>
        <label>EMP ID</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Degrees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HS</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>MSc</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>JD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Exchange_Rate_Date__c</fullName>
        <label>Effective Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Salary_Date__c</fullName>
        <label>Effective Salary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Dimagi Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Significant Other</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Fax__c</fullName>
        <label>Employee Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Folder_Dropbox_Location__c</fullName>
        <label>Employee Folder Dropbox Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <description>Emp ID for charting</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Middle_Name__c</fullName>
        <label>Employee Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>LOA</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>External Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dimagi, INC</fullName>
                </value>
                <value>
                    <fullName>Dimagi Software Innovations</fullName>
                </value>
                <value>
                    <fullName>Dimagi South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Caucasion</fullName>
                </value>
                <value>
                    <fullName>Afican-American</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate (Local:USD)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_Withholding__c</fullName>
        <label>Federal Tax Withholding</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Location__c</fullName>
        <label>Field Location</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer_1__c</fullName>
        <label>Former Employer 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer_3__c</fullName>
        <label>Former Employer 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Employer__c</fullName>
        <label>Former Employer 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Services__c</fullName>
        <label>Global Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gym_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gym Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Email__c</fullName>
        <label>Personal Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Time_Reports__c</fullName>
        <inlineHelpText>For employees paid hourly, based on on FB time reports</inlineHelpText>
        <label>Hourly Rate (Time Reports)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Pay_Period__c</fullName>
        <label>Hours Per Pay Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Week__c</fullName>
        <inlineHelpText>40 Hours is full time employee</inlineHelpText>
        <label>Hours Per Week</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INC__c</fullName>
        <label>INC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Beneficiary__c</fullName>
        <label>Insurance Beneficiary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <label>Medical Insurance Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Bharti AXA</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>HPHC</fullName>
                </value>
                <value>
                    <fullName>NSIA</fullName>
                </value>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsAssistant__c</fullName>
        <label>IsAssistant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JPG__c</fullName>
        <label>JPG</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Function</label>
        <referenceTo>SFDC_Job_Function__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>R00N30000001eUPQEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOCAL_EMERGENCY_CONTACT__c</fullName>
        <description>Local emergency contact, primarily for employees in country offices</description>
        <label>LOCAL EMERGENCY CONTACT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_1_Proficiency__c</fullName>
        <label>Language 1 Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Proficient</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_2_Proficiency__c</fullName>
        <label>Language 2 Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Proficient</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_3_Proficiency__c</fullName>
        <label>Language 3 Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fluent</fullName>
                </value>
                <value>
                    <fullName>Proficient</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Spoken_2__c</fullName>
        <label>Language Spoken 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_3__c</fullName>
        <label>Language Spoken 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_4__c</fullName>
        <label>Language Spoken 4</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken__c</fullName>
        <label>Language Spoken 1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loaded_Daily_Rate__c</fullName>
        <formula>(Annual_Salary_in_USD__c /260)* (1+0.30)*(1+0.51)*(1+0.09)*(1+0.10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Salary over 260 working days, with 30% Fringe, 51% Overhead, 9% G&amp;A, 10 % fee</inlineHelpText>
        <label>Loaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_Email__c</fullName>
        <description>Email address for local emergency contact</description>
        <label>Local Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_Phone__c</fullName>
        <description>Phone number for local emergency contact</description>
        <label>Local Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Local_Emergency_Contact_Relationship__c</fullName>
        <description>Relationship to employee for local emergency contact</description>
        <label>Local Emergency Contact Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Significant Other</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Loaded_Daily_Rate__c</fullName>
        <description>Calculates the Daily loaded rate in local currency</description>
        <formula>Loaded_Daily_Rate__c*Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Loaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Unloaded_Daily_Rate__c</fullName>
        <description>Calculates the Unloaded Daily Rate in local currency</description>
        <formula>Unloaded_Daily_Rate__c*Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Unloaded Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mail_Drop__c</fullName>
        <label>Mail Drop</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>